--- a/Mcdonald/Mcdonald/Mcdonald.csproj
+++ b/Mcdonald/Mcdonald/Mcdonald.csproj
@@ -57,9 +57,13 @@
     </ApplicationDefinition>
     <Compile Include="DataSource\FoodDataSource.cs" />
     <Compile Include="DataSource\CategoryDataSource.cs" />
+    <Compile Include="DataSource\SeatDataSource.cs" />
     <Compile Include="Manager\CategoryManager.cs" />
-    <Compile Include="View\OrderWindow.xaml.cs">
-      <DependentUpon>OrderWindow.xaml</DependentUpon>
+    <Compile Include="View\OrderCtrl.xaml.cs">
+      <DependentUpon>OrderCtrl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\SeatCtrl.xaml.cs">
+      <DependentUpon>SeatCtrl.xaml</DependentUpon>
     </Compile>
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -73,7 +77,11 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="View\OrderWindow.xaml">
+    <Page Include="View\OrderCtrl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\SeatCtrl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
