--- a/Mcdonald/Mcdonald/Mcdonald.csproj
+++ b/Mcdonald/Mcdonald/Mcdonald.csproj
@@ -69,6 +69,9 @@
     <Compile Include="View\SeatItemCtrl.xaml.cs">
       <DependentUpon>SeatItemCtrl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\StatisticCtrl.xaml.cs">
+      <DependentUpon>StatisticCtrl.xaml</DependentUpon>
+    </Compile>
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -90,6 +93,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\SeatItemCtrl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\StatisticCtrl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
