--- a/Mcdonald/Mcdonald/Mcdonald.csproj
+++ b/Mcdonald/Mcdonald/Mcdonald.csproj
@@ -60,6 +60,9 @@
     <Compile Include="DataSource\SeatDataSource.cs" />
     <Compile Include="DataSource\StatisticsDataSource.cs" />
     <Compile Include="Manager\CategoryManager.cs" />
+    <Compile Include="View\LoadingCtrl.xaml.cs">
+      <DependentUpon>LoadingCtrl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\OrderCtrl.xaml.cs">
       <DependentUpon>OrderCtrl.xaml</DependentUpon>
     </Compile>
@@ -72,6 +75,10 @@
     <Compile Include="View\StatisticCtrl.xaml.cs">
       <DependentUpon>StatisticCtrl.xaml</DependentUpon>
     </Compile>
+    <Page Include="View\LoadingCtrl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
